#4159 副檔名 改成 icon

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#fafafa">
     <link href="/site.webmanifest" rel="manifest">
-    <link rel="icon" type="image/x-icon" href="~/media/fcb/browser/logo.ico">
+    <link rel="icon" type="image/x-icon" href="~/media/fcb/browser/logo.icon">
     <!-- 3rd party vendor -->
     @RenderAssetsService.Current.Scripts("/themes/vendor/modernizr-3.11.7.min.js", "/themes/vendor/jquery-3.7.1.min.js")
     <!-- ui vendor -->
