--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
@@ -29,7 +29,7 @@
                 <option value="股票名稱高至低" data-sorting-column="ProductCode" data-sorting-class="is-desc">股票名稱高至低</option>
                 <option value="股票名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">股票名稱低至高</option>
                 <option value="交易所代碼高至低" data-sorting-column="FundCode" data-sorting-class="is-desc">交易所代碼高至低</option>
-                <option value="交易所代碼低至高" data-sorting-column="FundCode" data-sorting-class="is-asc">交易所代碼高至低</option>
+                <option value="交易所代碼低至高" data-sorting-column="FundCode" data-sorting-class="is-asc">交易所代碼低至高</option>
                 <option value="收盤價高至低" data-sorting-column="ClosingPrice" data-sorting-class="is-desc">收盤價高至低</option>
                 <option value="收盤價低至高" data-sorting-column="ClosingPrice" data-sorting-class="is-asc">收盤價低至高</option>
                 <option value="漲跌幅高至低" data-sorting-column="ChangePercentage" data-sorting-class="is-desc">漲跌幅高至低</option>
