--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
@@ -188,7 +188,7 @@
                                             <div class="c-cardTable__content">@item.EstablishmentSeniority</div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
-                                            <div class="c-cardTable__title" data-length="5">管理費(%)</div>
+                                            <div class="c-cardTable__title" data-length="5">管理費</div>
                                             <div class="c-cardTable__content">@item.TotalManagementFeeFormat</div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
